Fix search table on small screens

--- a/app/[locale]/(main)/statistics/page.module.scss
+++ b/app/[locale]/(main)/statistics/page.module.scss
@@ -1,6 +1,6 @@
 .statisticsPageWrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
     gap: 4rem;
     padding-block: 2rem;
 }
